# GSSSP

./: .gitignore  README.md  generator_fit_example.py  generator_save_images_example.py  generator_use_example.py  main.py  observationArtist.py  pyproject.toml  requirements.txt
generators/: spectrumLabeledSequence.py
src/gsssp/: __init__.py  observationArtist.py
src/gsssp/generators/: spectrumLabeledSequence.py
utils/: observationArtist.py
